Jenkins(BlueOcean)/ingress.yaml
## Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: kv-devops-tools
spec:
  ingressClassName: nginx
  rules:
  - host: "jenkins.kvhome.in"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: jenkins-service
            port:
              number: 8080
